@@ -1,3 +1,7 @@
+2011-01-17  Christopher  <chrissitopher@gmx.de>
+
+	* Fixed bug #10989: Anchors in internal links are incorrectly treated as pages (thanks to Michael Miousse) 
+
 2011-01-17  Michael Miousse  <michael.miousse@infoglobe.ca>
 
 	* Fixed bug #12226: Website that has multiple domainsrecords produces funny links
